--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -9,10 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "vite": "^6.3.5",
-    "bootstrap": "^5.3.3"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -22,6 +21,7 @@
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0"
+    "globals": "^16.0.0",
+    "vite": "^7.0.0"
   }
 }
